--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                   <!-- navbar -->
                   <nav  class="fixed" id="menu">
               <div  id="home" class="  deep-orange lighten-2  nav-wrapper">
-              <a href="#"  class="brand-logo" data-activates="slide-out" class="btn button-collapse">MOI</a>
+              <a href="#"  class="brand-logo" data-activates="slide-out" class="btn button-collapse"></a>
               <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
               <ul class="right hide-on-med-and-down">
                 <li><a href="#home">Home</a></li>
