get in shape image

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                  </div>
                  <a href="#!user"><img class="circle" src="img/Mad.png"></a>
                  <a href="#!name"><span class="black-text name">Madjid Goumidi</span></a>
-                 <a href="#!email"><span class="black-text email">madjidgo@gmail.com</span></a>
+                 <a href="mailto:madjidgo@gmail.com"><span class="black-text email">madjidgo@gmail.com</span></a>
                </div></li>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#formation">Formation</a></li>
@@ -261,18 +261,13 @@
                              <div class="modal-content">
                                <h4  class="center">MAdjid Goumidi: <br>
                                  Personne motivée,dynamique</h4>
-                               <p class="center red-text text-darken-3 lighten-3">EXPÉRIENCES
+                               <p class="center red-text text-darken-3 lighten-3">
+                                 <li><div class="user-view">
 
-
-                                                      DEVELOPPEUR WEB JUNIOR
-                                                      2017
-                                                      Simplon Roubaix
-                                                       <br>
-
-
-                                                      Objectif:
-
-          <strong> Recherche STAGE début janvier 2018 en développement informatique</strong>
+                                  <a href="#!user"><img class="circle" src="img/Mad.png"></a>
+                                  <a href="#!name"><span class="black-text name">Bonjour!</span></a>
+                                  <a href="mailto:madjidgo@gmail.com"><span class="black-text email"><mark><strong>Recherche STAGE début janvier 2018 </mark><strong></span></a>
+                                </div></li>
 
                               </p>
                              </div>
@@ -286,9 +281,9 @@
                            <div class="col l4 offset-l2 s12">
                              <h5 class="white-text">Social Network</h5>
                              <ul>
-                               <li><a class="grey-text text-lighten-3" href=https://github.com/Madjidgo>GITHUB</a></li>
-                               <li><a class="grey-text text-lighten-3" href=https://www.linkedin.com/in/madjid-g-60502aa0/>LINKEDIN</a></li>
-                               <li><a class="grey-text text-lighten-3" href=https://twitter.com/madjidgo>TWITTER</a></li>
+                               <li><a class="waves-effect deep-orange accent-1 btn grey-text text-lighten-3" href=https://github.com/Madjidgo>GITHUB</a></li>
+                               <li><a class="waves-effect deep-orange accent-1 btn grey-text text-lighten-3" href=https://www.linkedin.com/in/madjid-g-60502aa0/>LINKEDIN</a></li>
+                               <li><a class="waves-effect deep-orange accent-1 btn grey-text text-lighten-3" href=https://twitter.com/madjidgo>TWITTER</a></li>
                              </ul>
                            </div>
                          </div>
