replace link by click

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <link rel="icon" type="png" href="mg.png" />
         <!-- Place favicon.ico in the root directory -->
           <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="fonts/css/font-awesome.min.css">
@@ -95,7 +96,7 @@
               </div>
               <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4">Projet Slider<i class="material-icons right">more_vert</i></span>
-                <p><a href="https://madjidgo.github.io/slider-en-javascript/">This is a link</a></p>
+                <p><a href="https://madjidgo.github.io/slider-en-javascript/">click</a></p>
               </div>
               <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4">Card Slider<i class="material-icons right">close</i></span>
@@ -111,7 +112,7 @@
               </div>
               <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4">Card Leboncoin<i class="material-icons right">more_vert</i></span>
-                <p><a href="https://madjidgo.github.io/leboncoin/offres.html">This is a link</a></p>
+                <p><a href="https://madjidgo.github.io/leboncoin/offres.html">click</a></p>
               </div>
               <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4">Card Leboncoin<i class="material-icons right">close</i></span>
@@ -127,7 +128,7 @@
               </div>
               <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4">Card Memories<i class="material-icons right">more_vert</i></span>
-                <p><a href="https://madjidgo.github.io/memories/">This is a link</a></p>
+                <p><a href="https://madjidgo.github.io/memories/">click</a></p>
               </div>
               <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4">Card Memories<i class="material-icons right">close</i></span>
@@ -143,7 +144,7 @@
               </div>
               <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4">Card Tatoo<i class="material-icons right">more_vert</i></span>
-                <p><a href="https://madjidgo.github.io/projettatoo/">This is a link</a></p>
+                <p><a href="https://madjidgo.github.io/projettatoo/">click</a></p>
               </div>
               <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4">Card Tatoo<i class="material-icons right">close</i></span>
@@ -159,7 +160,7 @@
               </div>
               <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4">Card Airbnb<i class="material-icons right">more_vert</i></span>
-                <p><a href="https://madjidgo.github.io/projetairbnb/">This is a link</a></p>
+                <p><a href="https://madjidgo.github.io/projetairbnb/">click</a></p>
               </div>
               <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4">Card Airbnb<i class="material-icons right">close</i></span>
@@ -175,17 +176,13 @@
                   </div>
                   <div class="card-content">
                       <span class="card-title activator grey-text text-darken-4">Card Coach<i class="material-icons right">more_vert</i></span>
-                      <p><a href="https://madjidgo.github.io/coach-sportif/">This is a link</a></p>
+                      <p><a href="https://madjidgo.github.io/coach-sportif/">click</a></p>
                   </div>
                   <div class="card-reveal">
                       <span class="card-title grey-text text-darken-4">Card Coach<i class="material-icons right">close</i></span>
                       <p>Completed project HTML5/CSS3.</p>
                   </div>
               </div>
-
-
-
-
 
                 <!-- n7 -->
                 <div class="card z-depth-5 col s12 m6 l4 ">
@@ -194,7 +191,7 @@
                     </div>
                     <div class="card-content">
                       <span class="card-title activator grey-text text-darken-4">Card Memories<i class="material-icons right">more_vert</i></span>
-                      <p><a href="https://madjidgo.github.io/blog/">This is a link</a></p>
+                      <p><a href="https://madjidgo.github.io/blog/">click</a></p>
                     </div>
                     <div class="card-reveal">
                       <span class="card-title grey-text text-darken-4">Card Memories<i class="material-icons right">close</i></span>
@@ -209,7 +206,7 @@
                   </div>
                   <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Card Memories<i class="material-icons right">more_vert</i></span>
-                    <p><a href="https://madjidgo.github.io/archiduchesse/">This is a link</a></p>
+                    <p><a href="https://madjidgo.github.io/archiduchesse/">click</a></p>
                   </div>
                   <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Card Memories<i class="material-icons right">close</i></span>
@@ -225,7 +222,7 @@
                   </div>
                   <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">Project Palais de lille<i class="material-icons right">more_vert</i></span>
-                    <p><a href="  https://juliecanevet.github.io/palais/">This is a link</a></p>
+                    <p><a href="  https://juliecanevet.github.io/palais/">click</a></p>
                   </div>
                   <div class="card-reveal">
                     <span class="card-title grey-text text-darken-4">Project Palais de lille<i class="material-icons right">close</i></span>
@@ -264,7 +261,7 @@
                                <p class="center red-text text-darken-3 lighten-3">
                                  <li><div class="user-view">
 
-                                  <a href="#!user"><img class="circle" src="img/Mad.png"></a>
+                                  <a href="#!user"><img class="circle responsive-img" src="img/Mad.png"></a>
                                   <a href="#!name"><span class="black-text name">Bonjour!</span></a>
                                   <a href="mailto:madjidgo@gmail.com"><span class="black-text email"><mark><strong>Recherche STAGE début janvier 2018 </mark><strong></span></a>
                                 </div></li>
@@ -290,8 +287,8 @@
                        </div>
                        <div class="footer-copyright">
                          <div class="container">
-                         © 2017 Copyright MAdjidgo Simplon
-                         <a class="grey-text text-lighten-4 right" href="#!">Remerciement</a>
+                         © 2017 Copyright MAdjidgo
+                         <a class="grey-text text-lighten-4 right" href="https://simplon.co/roubaix/">Remerciement: Simplon Roubaix</a>
                          </div>
                        </div>
                      </footer>
