--- a/index.html
+++ b/index.html
@@ -60,15 +60,13 @@
 
 
 
-                        <h3 class="header center">Formation and Languages</h3>
+                        <h3 class="header center">Formation et Langages</h3>
                           <hr>
-                          <p class=" center red-text text-darken-3 lighten-3"> <strong>Formation Dev Junior:</strong><br> les acquis de formation et les acquis de l'expérience d'une personne sont définis et démontrés en vue d'une reconnaissance par un établissement d'enseignement ou un employeur. En France, on voit parfois le terme de portefeuille de compétences. Avec le développement de l'usage des technologies, on parle maintenant de portfolio numérique ou de cyberfolio.
-
-        Le portfolio diffère du curriculum vitæ dans le sens où les renseignements qu'il contient sont articulés en fonction d'un objectif, par exemple une demande d'emploi, et qu'il doit aussi présenter des preuves des acquis de la personne.
-
-        Au travers de ce portfolio j'aimerais vous présenter les differents acquis que j'ai pu acquérir en développement HTML5,CSS3,BOOSTRAP4,JAVASCRIPT,PHP,MYSQL.</p>
+                          <p class=" center red-text text-darken-3 lighten-3"> <strong>Formation Développeur Web Junior:</strong><br>
+                          Bienvenue sur mon portfolio, je m'appelle Madjid Goumidi je viens de suivre 9 mois en formation Développeur web fullstack à Simplon Roubaix.
+                          Au travers de ce portfolio j'aimerais vous présenter les differents acquis que j'ai pu acquérir en développement HTML5,CSS3,BOOSTRAP4,JAVASCRIPT,PHP,MYSQL...</p>
                             <!-- caroussel -->
-                      <div class="carousel">
+                     <!--  <div class="carousel">
                           <a class="carousel-item" href="#two!"><img src="img/jquery.png"></a>
                           <a class="carousel-item" href="#one!"><img src="img/html5_css3.jpg"></a>
                           <a class="carousel-item" href="#seven!"><img src="img/css3.jpeg"></a>
@@ -77,7 +75,7 @@
                           <a class="carousel-item" href="#five!"><img src="img/b4.png"></a>
                           <a class="carousel-item" href="#six!"><img src="img/php.jpg"></a>
 
-                      </div>
+                      </div> -->
 
                     </div>
                   </div>
@@ -230,57 +228,35 @@
                              <i class="material-icons">arrow_upward</i>
                            </a>
 
-            <!-- footer -->
+ <!-- start footer -->
 
-                           <footer  id="contact" class="page-footer deep-orange lighten-2">
-                       <div class="container">
-                         <div class="row">
-                           <div class="col l6 s12">
-
-                             <!-- Modal Trigger -->
-                               <a class="waves-effect deep-orange accent-1 btn modal-trigger" href="#modal1">About Me</a>
-
-
-                               <!-- Modal Structure -->
-                           <div id="modal1" class="modal modal-fixed-footer">
-                             <div class="modal-content">
-                               <h4  class="center">MAdjid Goumidi: <br>
-                                 Personne motivée,dynamique</h4>
-                               <p class="center red-text text-darken-3 lighten-3">
-                                 <li><div class="user-view">
-
-                                  <a href="#!user"><img class="circle responsive-img" src="img/Mad.png"></a>
-                                  <a href="#!name"><span class="black-text name">Bonjour!</span></a>
-                                  <a href="mailto:madjidgo@gmail.com"><span class="black-text email"><mark><strong>Recherche STAGE début janvier 2018 </mark><strong></span></a>
-                                </div></li>
-
-                              </p>
-                             </div>
-                             <div class="modal-footer">
-                               <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Agree</a>
-                             </div>
-                           </div>
-
-
-                           </div>
-                           <div class="col l4 offset-l2 s12">
-                             <h5 class="white-text">Social Network</h5>
-                             <ul>
-                               <li><a class="waves-effect deep-orange accent-1 btn grey-text text-lighten-3 rs " href=https://github.com/Madjidgo>Github :<i class="fab fa-github"></i></a></li>
-                               <li><a class="waves-effect deep-orange accent-1 btn grey-text text-lighten-3 rs my-3" href=https://www.linkedin.com/in/madjid-g-60502aa0/>linkedin:<i class="fab fa-linkedin-in"></i></a></li>
-                               <li><a class="waves-effect deep-orange accent-1 btn grey-text text-lighten-3 rs my-3" href=https://twitter.com/madjidgo>Twitter :<i class="fab fa-twitter-square"></i></a></li>
-                             </ul>
-                           </div>
-                         </div>
-                       </div>
-                       <div class="footer-copyright">
+                    <footer id="contact" class="page-footer deep-orange lighten-2">
+                        <div class="container">
+                          <div class="row">
+                            <div class="col l6 s12">
+                              <h5 class="white-text">Réseaux Sociaux</h5>
+                              <p class="grey-text text-lighten-4">Vous pouvez me suivre sur:</p>
+                            </div>
+                            <div class="col l4 offset-l2 s12">
+                              <h5 class="white-text">Liens</h5>
+                              <ul>
+                                <li><a class="grey-text text-lighten-3" href="https://github.com/Madjidgo"><i class="fab  fa-github fa-2x"></i>:Github</a></li>
+                                <li><a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/madjid-g-60502aa0/"><i class="fab fa-linkedin-in fa-2x"></i>:Linkedin</a></li>
+                                <li><a class="grey-text text-lighten-3" href="https://twitter.com/madjidgo"><i class="fab fa-twitter-square fa-2x"></i>:Twitter</a></li>
+                                <li><a class="grey-text text-lighten-3" href="mailto:madjidgo@gmail.com"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i>:Gmail</a></li>
+                               
+                                
+                              </ul>
+                            </div>
+                          </div>
+                        </div>
+                         <div class="footer-copyright">
                          <div class="container">
                          © 2017 Copyright MAdjidgo
                          <a class="grey-text text-lighten-4 right" href="https://simplon.co/roubaix/">Remerciement: Simplon Roubaix</a>
                          </div>
                        </div>
-                     </footer>
-
+                     </footer> 
 
 
 
