modification cards add the button

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <h3 class="header center">Formation et Langages</h3>
                           <hr>
                           <p class=" center red-text text-darken-3 lighten-3"> <strong>Formation Développeur Web Junior:</strong><br>
-                          Bienvenue sur mon portfolio, je m'appelle Madjid Goumidi je viens de suivre 9 mois en formation Développeur web fullstack à Simplon Roubaix.
+                          Bienvenue sur mon portfolio, je m'appelle Madjid Goumidi je viens de suivre une formation de 3mois en Front et une autre de 6 mois en BACk à la fin de celle-ci j'ai obtenu une attestation en tant que Développeur web junior fullstack délivrée par  Simplon Roubaix.
                           Au travers de ce portfolio j'aimerais vous présenter les differents acquis que j'ai pu acquérir en développement HTML5,CSS3,BOOSTRAP4,JAVASCRIPT,PHP,MYSQL...</p>
                             <!-- caroussel -->
                      <!--  <div class="carousel">
@@ -86,16 +86,17 @@
             <!-- cards -->
                         <h3 class="center">PortFolio</h3>
                           <hr>
-                <div  id="portfolio" class="container">
-                  <div class="row">
+                          <div  id="portfolio" class="container">
+                            <div class="row">
+
                 <!-- n1 -->
             <div class="card  z-depth-5 col s12 m6 l4 ">
               <div class="card-image   responsive-img waves-effect waves-block waves-light">
                 <img class="activator " src="img/kabyle.jpg">
               </div>
               <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Projet Slider<i class="material-icons right">more_vert</i></span>
-                <p><a href="https://madjidgo.github.io/slider-en-javascript/">click</a></p>
+                <span class="card-title activator grey-text text-darken-4">Projet Slider <a class="btn-floating right waves-effect waves-light orange "><i class="material-icons">add</i></a></span>
+                <p><a  href="https://madjidgo.github.io/slider-en-javascript/">click</a></p>
               </div>
               <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4">Card Slider<i class="material-icons right">close</i></span>
@@ -104,13 +105,13 @@
             </div>
 
 
-            <!-- n5 -->
+            <!-- n2 -->
           <div class="card  z-depth-5 col s12 m6 l4">
               <div class="card-image waves-effect waves-block waves-light">
                 <img class="activator responsive-img" src="img/leboncoin.jpg">
               </div>
               <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Card Leboncoin<i class="material-icons right">more_vert</i></span>
+                <span class="card-title activator grey-text text-darken-4">Card Leboncoin <a class="btn-floating right waves-effect waves-light orange "><i class="material-icons">add</i></a></span>
                 <p><a href="https://madjidgo.github.io/leboncoin/offres.html">click</a></p>
               </div>
               <div class="card-reveal">
@@ -120,13 +121,13 @@
             </div>
 
 
-            <!-- n6 -->
+            <!-- n3 -->
           <div class="card z-depth-5 col s12 m6 l4">
               <div class="card-image waves-effect waves-block waves-light">
                 <img class="activator responsive-img" src="img/dos.jpg">
               </div>
               <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Card Memories<i class="material-icons right">more_vert</i></span>
+                <span class="card-title activator grey-text text-darken-4">Card Memories <a class="btn-floating right waves-effect waves-light orange "><i class="material-icons">add</i></a></span>
                 <p><a href="https://madjidgo.github.io/memories/">click</a></p>
               </div>
               <div class="card-reveal">
@@ -142,7 +143,7 @@
                 <img class="activator " src="img/imgback.jpg">
               </div>
               <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Card Tatoo<i class="material-icons right">more_vert</i></span>
+                <span class="card-title activator grey-text text-darken-4">Card Tatoo <a class="btn-floating right waves-effect waves-light orange "><i class="material-icons">add</i></a></span>
                 <p><a href="https://madjidgo.github.io/projettatoo/">click</a></p>
               </div>
               <div class="card-reveal">
@@ -158,7 +159,7 @@
                 <img class="activator " src="img/airbnb.jpg">
               </div>
               <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Card Airbnb<i class="material-icons right">more_vert</i></span>
+                <span class="card-title activator grey-text text-darken-4">Card Airbnb <a class="btn-floating right waves-effect waves-light orange "><i class="material-icons">add</i></a></span>
                 <p><a href="https://madjidgo.github.io/projetairbnb/">click</a></p>
               </div>
               <div class="card-reveal">
@@ -174,7 +175,7 @@
                       <img class="activator responsive-img" src="img/slider-1.jpg">
                   </div>
                   <div class="card-content">
-                      <span class="card-title activator grey-text text-darken-4">Card Coach<i class="material-icons right">more_vert</i></span>
+                      <span class="card-title activator grey-text text-darken-4">Card Coach <a class="btn-floating right waves-effect waves-light orange "><i class="material-icons">add</i></a></span>
                       <p><a href="https://madjidgo.github.io/coach-sportif/">click</a></p>
                   </div>
                   <div class="card-reveal">
@@ -189,7 +190,7 @@
                       <img class="activator responsive-img" src="img/tech.jpeg">
                     </div>
                     <div class="card-content">
-                      <span class="card-title activator grey-text text-darken-4">Card Memories<i class="material-icons right">more_vert</i></span>
+                      <span class="card-title activator grey-text text-darken-4">Card Memories <a class="btn-floating right waves-effect waves-light orange "><i class="material-icons">add</i></a></span>
                       <p><a href="https://madjidgo.github.io/blog/">click</a></p>
                     </div>
                     <div class="card-reveal">
@@ -207,7 +208,7 @@
                     <img class="activator responsive-img" src="img/palais.jpeg">
                   </div>
                   <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">Card Palais de lille<i class="material-icons right">more_vert</i></span>
+                    <span class="card-title activator grey-text text-darken-4">Card Palais de lille <a class="btn-floating right waves-effect waves-light orange "><i class="material-icons">add</i></a></span>
                     <p><a href="  https://juliecanevet.github.io/palais/">click</a></p>
                   </div>
                   <div class="card-reveal">
