add img/carHandle.png and supprime img/leboncoin

--- a/index.html
+++ b/index.html
@@ -51,35 +51,51 @@
               <!-- cards -->
                 <h3 class="center">Mes projets</h3>
                   <hr>
-                <div  id="portfolio" class="container">
+                <div  id="portfolio" class="container-fluid">
 
                 <h4 class="projectGroup">Back-end PHP</h4>
 
                   <div class="row">
 
                 <!-- n1 -->
-
+                <div class="card  z-depth-5 col s12 m6 l4 offset-l1">
+                    <div class="card-image waves-effect waves-block waves-light">
+                      <img class="activator responsive-img" src="img/carHandle.png">
+                    </div>
+                    <div class="card-content">
+                      <span class="card-title activator grey-text text-darken-4 font1">Card CarHandle <a class="btn-floating right waves-effect waves-light deep-orange "><i class="material-icons">add</i></a></span>
+                      <p>
+                      <a href=""><i class="fab fa-github fa-2x"></i></a>
+                      <a href=""><i class="fab fa-wpexplorer fa-2x"></i></a>
+                      </p>
+                    </div>
+                    <div class="card-reveal">
+                      <span class="card-title grey-text text-darken-4">Card CarHandle<i class="material-icons right">close</i></span>
+                      <p>Completed project HTML5/CSS3.</p>
+                    </div>
+                  </div>
 
 
             <!-- n2 -->
                   <div class="card  z-depth-5 col s12 m6 l4 offset-l1">
                       <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator responsive-img" src="img/leboncoin.jpg">
+                        <img class="activator responsive-img" src="img/carHandle.png">
                       </div>
                       <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4 font1">Card Leboncoin <a class="btn-floating right waves-effect waves-light deep-orange "><i class="material-icons">add</i></a></span>
+                        <span class="card-title activator grey-text text-darken-4 font1">Card CarHandle <a class="btn-floating right waves-effect waves-light deep-orange "><i class="material-icons">add</i></a></span>
                         <p>
-                        <a href="https://madjidgo.github.io/leboncoin/offres.html"><i class="fab fa-github fa-2x"></i></a>
-                        <a href="https://madjidgo.github.io/slider-en-javascript/"><i class="fab fa-wpexplorer fa-2x"></i></a>
+                        <a href=""><i class="fab fa-github fa-2x"></i></a>
+                        <a href=""><i class="fab fa-wpexplorer fa-2x"></i></a>
                         </p>
                       </div>
                       <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Card Leboncoin<i class="material-icons right">close</i></span>
-                        <p>Completed project HTML5/CSS3.</p>
+                        <span class="card-title grey-text text-darken-4">Card CarHandle<i class="material-icons right">close</i></span>
+                        <p>Réalisation d'un jeu des pairs en pur JavaScript. Objectif : travailler le DOM, la gestion des événements et les intervalles.</p>
+                      </div>
                       </div>
                     </div>
 
-                    </div>
+
 
                   <h4 class="projectGroup">Front-end JS</h4>
 
@@ -98,7 +114,7 @@
                       </div>
                       <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Card Memories<i class="material-icons right">close</i></span>
-                        <p>Réalisation d'un jeu  MEMORIES en pur JavaScript. Objectif : travailler le DOM, la gestion des événements et les intervalles.</p>
+                        <p>Réalisation d'un jeu des pairs en pur JavaScript. Objectif : travailler le DOM, la gestion des événements et les intervalles.</p>
                       </div>
                     </div>
 
@@ -194,6 +210,7 @@
                           </p>
                   </div>
                 </div>
+              </div>
 
 
                               <div class=" container section white ">
