add project in Laravel

--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
                 <!-- n1 -->
                 <div class="card  z-depth-5 col s12 m6 l4 offset-l1">
                     <div class="card-image waves-effect waves-block waves-light">
-                      <img class="activator responsive-img" src="img/carHandle.png">
+                      <img class="activator responsive-img" src="img/UrlShortener.png">
                     </div>
                     <div class="card-content">
-                      <span class="card-title activator grey-text text-darken-4 font1">Card CarHandle <a class="btn-floating right waves-effect waves-light deep-orange "><i class="material-icons">add</i></a></span>
+                      <span class="card-title activator grey-text text-darken-4 font1">URL Shortener <a class="btn-floating right waves-effect waves-light deep-orange "><i class="material-icons">add</i></a></span>
                       <p>
-                      <a href=""><i class="fab fa-github fa-2x"></i></a>
-                      <a href=""><i class="fab fa-wpexplorer fa-2x"></i></a>
+                      <a href="https://github.com/Madjidgo/UrlShortener"><i class="fab fa-github fa-2x"></i></a>
+
                       </p>
                     </div>
                     <div class="card-reveal">
-                      <span class="card-title grey-text text-darken-4">Card CarHandle<i class="material-icons right">close</i></span>
-                      <p>Completed project HTML5/CSS3.</p>
+                      <span class="card-title grey-text text-darken-4">URL Shortener<i class="material-icons right">close</i></span>
+                      <p>Réalisation d'une petite API avec le framework Laravel.</p>
                     </div>
                   </div>
 
@@ -79,13 +79,13 @@
             <!-- n2 -->
                   <div class="card  z-depth-5 col s12 m6 l4 offset-l1">
                       <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator responsive-img" src="img/carHandle.png">
+                        <img class="activator responsive-img" src="img/carHandle1.png">
                       </div>
                       <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4 font1">Card CarHandle <a class="btn-floating right waves-effect waves-light deep-orange "><i class="material-icons">add</i></a></span>
                         <p>
-                        <a href=""><i class="fab fa-github fa-2x"></i></a>
-                        <a href=""><i class="fab fa-wpexplorer fa-2x"></i></a>
+                        <a href="https://github.com/Madjidgo/carHandle"><i class="fab fa-github fa-2x"></i></a>
+
                         </p>
                       </div>
                       <div class="card-reveal">
@@ -93,6 +93,7 @@
                         <p>Réalisation d'un jeu des pairs en pur JavaScript. Objectif : travailler le DOM, la gestion des événements et les intervalles.</p>
                       </div>
                       </div>
+
                     </div>
 
 
