modification stage actualy job

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
                 <div class="parallax-container p2 headerContainer">
                   <div class="parallax responsive-img"><img src="img/header.jpg"></div>
-                  <h2 class="aboutMe center font2">Je recherche un stage de développeur web <br>découvrez mon profil ! </h2>
+                  <h2 class="aboutMe center font2">Je recherche un <strong>poste</strong> de développeur web <br>découvrez mon profil ! </h2>
                 </div>
 
                           <!--
@@ -207,7 +207,7 @@
                           A près une carrière riche en expérience dans le secteur social où j'ai excercé des fonctions d 'éducateur et de responsable de secteur pendant plus de 10 ans, j'ai décidé de donner libre cours à ma passion pour l'informatique et d'entamer une reconvertion professionnelle. <br><br>
 
                           J'ai donc suivi une formation intensive de développeur web pendant 9 mois à <a href="https://www.adep-roubaix.fr/developpeur">Simplon Roubaix</a>. J'ai découvert avec plaisir l'environnement Linux, l'intégration web en HTML/CSS, le développement de programme front en JS et la programmation back-end en PHP. Je m'intéresse tout paticulièrement à la gestion des données, des utilisateurs et à la programmation orientée objet C'est pourquoi j'ai choisi de me spécialiser en PHP. J'utilise le framework Laravel depuis la fin de ma formation et j'apprends tout les jours de nouvelles pratiques de programmation. <br><br>
-                          Je suis une personne curieuse et dynamique qui aime s'investir dans de nouveaux projets. J'ai développé ce sens de l'engagement au travers de mes expériences dans le secteur social. J'aime particulièrement la programmation car elle me permet d'être en perpetuel apprentissage et de relever de nouveaux challenges au quotidien. Aujourd'hui j'espère intégrer, en stage, une entreprise du web où je pourrai continuer ma montée en compétence auprès d'une équipe de professionnels.
+                          Je suis une personne curieuse et dynamique qui aime s'investir dans de nouveaux projets. J'ai développé ce sens de l'engagement au travers de mes expériences dans le secteur social. J'aime particulièrement la programmation car elle me permet d'être en perpetuel apprentissage et de relever de nouveaux challenges au quotidien. Aujourd'hui j'espère intégrer une entreprise du web où je pourrai continuer ma montée en compétence auprès d'une équipe de professionnels.
                           </p>
                   </div>
                 </div>
